--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && prisma db push",
+   "build": "prisma generate && next build && prisma db push",
     "start": "next start",
     "lint": "next lint"
   },
